--- a/timeline.html
+++ b/timeline.html
@@ -12,7 +12,6 @@
             background-attachment: fixed;
             margin: 0;
             padding: 0;
-            height: 100vh; /* 让页面高度占满整个视口 */
         }
         .container {
             width: 90%;
@@ -20,7 +19,6 @@
             display: grid;
             grid-template-columns: 1fr 2fr 1.5fr;
             gap: 20px;
-            height: 100%; /* 让容器高度占满父元素 */
         }
         /* TimeLine Section */
         .timeline {
@@ -28,14 +26,13 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            height: 100%; /* 让时间线占满容器高度 */
         }
         .timeline-line {
             width: 2px;
             background-color: #D9B1BD;
-            height: 100%; /* 让时间线占满父元素高度 */
+            height: 100vh;
             position: relative;
-            margin-left: 10px;
+            margin-left:10px;
         }
         .timeline-star {
             width: 16px;
@@ -60,9 +57,26 @@
         .timeline-star:hover + .timeline-content {
             display: block;
         }
-        .timeline-left .timeline-content {
-            left: auto;
-            right: 20px; /* 让内容向左展开 */
+         /* 飘雪特效 */
+        .snowflake {
+            position: fixed;
+            top: -10px;
+            background: white;
+            border-radius: 50%;
+            width: 5px;
+            height: 5px;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            0% {
+                transform: translateY(0) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) translateX(20px);
+                opacity: 0;
+            }
         }
         .add-event-button {
             background: rgba(255, 255, 255, 0.8);
@@ -76,16 +90,11 @@
             left: -80px;
         }
         /* Profile Section */
-        .profile-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100%;
-        }
         .profile {
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
+            margin-bottom: 20px;
         }
         .profile img {
             width: 100px;
@@ -108,15 +117,13 @@
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
+            height: fit-content;
         }
         .message-board h2 {
             text-align: center;
             margin-bottom: 20px;
         }
-        .message {
+         .message {
             margin-bottom: 15px;
             padding: 10px;
             background: rgba(230, 230, 230, 1);
@@ -143,27 +150,6 @@
         .index a:hover {
             color: #7b2a3f;
         }
-           /* 飘雪特效 */
-        .snowflake {
-            position: fixed;
-            top: -10px;
-            background: white;
-            border-radius: 50%;
-            width: 5px;
-            height: 5px;
-            opacity: 0.8;
-            animation: fall linear infinite;
-        }
-        @keyframes fall {
-            0% {
-                transform: translateY(0) translateX(0);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(100vh) translateX(20px);
-                opacity: 0;
-            }
-        }
     </style>
 </head>
 <body>
@@ -174,13 +160,13 @@
         <a href="notebook.html">记录本</a>
     </div>
     <div class="container">
-        <!-- 左侧时间线 -->
+        <!-- Timeline Section -->
         <div class="timeline" id="timeline">
             <button class="add-event-button" onclick="addEvent()">添加时间点</button>
             <div class="timeline-line" id="timeline-line"></div>
         </div>
-        <!-- 中间部分：个人简介和留言板 -->
-        <div class="profile-container">
+        <!-- Profile Section -->
+        <div>
             <div class="profile">
                 <img src="阿湛头像.jpg" alt="阿湛头像" id="阿湛头像">
                 <h2>阿湛的自我介绍</h2>
@@ -196,11 +182,7 @@
                 <input type="file" id="upload-avatar-quan" onchange="uploadAvatar('泉泉头像')">
             </div>
         </div>
-        <!-- 右侧时间线 -->
-        <div class="timeline timeline-left" id="timeline-left">
-            <div class="timeline-line" id="timeline-line-left"></div>
-        </div>
-        <!-- 留言板 -->
+        <!-- Message Board Section -->
         <div class="message-board" id="message-board">
             <h2>留言板</h2>
             <textarea id="message-input" placeholder="写点什么吧..."></textarea>
@@ -221,11 +203,8 @@
         }
         function renderTimeline() {
             const container = document.getElementById("timeline-line");
-            const containerLeft = document.getElementById("timeline-line-left");
             container.innerHTML = "";
-            containerLeft.innerHTML = "";
             events.forEach((event, index) => {
-                // 第一根时间线的星星和内容
                 const star = document.createElement("div");
                 star.className = "timeline-star";
                 star.style.top = `${index * 50}px`;
@@ -234,15 +213,6 @@
                 content.innerHTML = `<strong>${event.date}</strong><p>${event.description}</p>`;
                 container.appendChild(star);
                 container.appendChild(content);
-                 // 第二根时间线的星星和内容
-                const starLeft = document.createElement("div");
-                starLeft.className = "timeline-star";
-                starLeft.style.top = `${index * 50}px`;
-                const contentLeft = document.createElement("div");
-                contentLeft.className = "timeline-content";
-                contentLeft.innerHTML = `<strong>${event.date}</strong><p>${event.description}</p>`;
-                containerLeft.appendChild(starLeft);
-                containerLeft.appendChild(contentLeft);
             });
         }
         function uploadAvatar(id) {
