--- a/timeline.html
+++ b/timeline.html
@@ -30,9 +30,9 @@
         .timeline-line {
             width: 2px;
             background-color: #D9B1BD;
-            height: 100vh;
+            height: 100vh; /* 设置固定高度 */
             position: relative;
-            margin-left:10px;
+            margin-left: 10px;
             overflow-y: auto; /* 启用垂直滚动条 */
         }
         .timeline-star {
@@ -57,27 +57,6 @@
         }
         .timeline-star:hover + .timeline-content {
             display: block;
-        }
-        /* 飘雪特效 */
-        .snowflake {
-            position: fixed;
-            top: -10px;
-            background: white;
-            border-radius: 50%;
-            width: 5px;
-            height: 5px;
-            opacity: 0.8;
-            animation: fall linear infinite;
-        }
-        @keyframes fall {
-            0% {
-                transform: translateY(0) translateX(0);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(100vh) translateX(20px);
-                opacity: 0;
-            }
         }
         .add-event-button {
             background: rgba(255, 255, 255, 0.8);
@@ -124,7 +103,7 @@
             text-align: center;
             margin-bottom: 20px;
         }
-         .message {
+        .message {
             margin-bottom: 15px;
             padding: 10px;
             background: rgba(230, 230, 230, 1);
@@ -151,10 +130,31 @@
         .index a:hover {
             color: #7b2a3f;
         }
+        /* 飘雪特效 */
+        .snowflake {
+            position: fixed;
+            top: -10px;
+            background: white;
+            border-radius: 50%;
+            width: 5px;
+            height: 5px;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            0% {
+                transform: translateY(0) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) translateX(20px);
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body>
-<!-- 索引菜单 -->
+    <!-- 索引菜单 -->
     <div class="index">
         <a href="pomodoro.html">番茄钟</a>
         <a href="profile.html">个人主页</a>
@@ -183,7 +183,7 @@
                 <input type="file" id="upload-avatar-quan" onchange="uploadAvatar('泉泉头像')">
             </div>
         </div>
-         <!-- Message Board Section -->
+        <!-- Message Board Section -->
         <div class="message-board" id="message-board">
             <h2>留言板</h2>
             <textarea id="message-input" placeholder="写点什么吧..."></textarea>
@@ -217,19 +217,25 @@
                 star.style.top = `${index * 50}px`;
                 const content = document.createElement("div");
                 content.className = "timeline-content";
-                content.innerHTML = `<strong>${event.date}</strong><p>${event.description}</p>`;<button onclick="deleteEvent(${index})">删除</button>`;
+                content.innerHTML = `
+                    <strong>${event.date}</strong>
+                    <p>${event.description}</p>
+                    <button onclick="deleteEvent(${index})">删除</button>
+                `;
                 container.appendChild(star);
                 container.appendChild(content);
             });
         }
+
         // 删除时间点
         function deleteEvent(index) {
-           if (confirm("确定要删除这个时间点吗？")) {
-           events.splice(index, 1); // 从数组中移除
-           localStorage.setItem("events", JSON.stringify(events)); // 更新 localStorage
-           renderTimeline(); // 重新渲染时间线
-           }
+            if (confirm("确定要删除这个时间点吗？")) {
+                events.splice(index, 1);
+                localStorage.setItem("events", JSON.stringify(events));
+                renderTimeline();
+            }
         }
+
         // 上传头像
         function uploadAvatar(id) {
             const fileInput = document.getElementById(`upload-avatar-${id === "阿湛头像" ? "azhan" : "quan"}`);
@@ -239,13 +245,12 @@
                 const reader = new FileReader();
                 reader.onload = function (e) {
                     imgElement.src = e.target.result;
-                    localStorage.setItem(id, e.target.result); // 保存头像到 localStorage
+                    localStorage.setItem(id, e.target.result);
                 };
                 reader.readAsDataURL(file);
             }
         }
-
-        // 添加留言
+         // 添加留言
         function addMessage() {
             const messageInput = document.getElementById("message-input");
             const messageText = messageInput.value.trim();
@@ -253,7 +258,7 @@
                 const nickname = prompt("请输入昵称:");
                 const timestamp = new Date().toLocaleString();
                 messages.push({ nickname, text: messageText, time: timestamp });
-                localStorage.setItem("messages", JSON.stringify(messages)); // 保存留言到 localStorage
+                localStorage.setItem("messages", JSON.stringify(messages));
                 renderMessages();
                 messageInput.value = "";
             }
